<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_sett"
                android:textColor="#000000"
                android:textSize="24sp"
                android:typeface="normal" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:stretchColumns="1,2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewPhone"
                            android:layout_column="1"
                            android:gravity="center_vertical"
                            android:hint="@string/text_sett_phone"
                            android:text="@string/text_sett_phone"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextPhone"
                            android:layout_column="2"
                            android:ems="10"
                            android:inputType="textPersonName" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/textViewEmail"
                            android:layout_column="1"
                            android:gravity="center_vertical"
                            android:hint="@string/text_sett_email"
                            android:text="@string/text_sett_email"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:layout_column="2"
                            android:ems="10"
                            android:inputType="textPersonName" />

                    </TableRow>

                </TableLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnSave"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/text_sett_save" />
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>